Live data charts finished.

--- a/chart-over65.html
+++ b/chart-over65.html
@@ -10,8 +10,6 @@ body
 </style>
 </head>  
 <body>
-  <!--
-  "chartArea":{"left":10,"top":10,"width":"90%","height":"90%"},"width":550,"height":550,
-  -->
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/static/modules/gviz/1.0/chart.js"> {"dataSourceUrl":"//docs.google.com/a/ocupop.com/spreadsheet/tq?key=0AtI8QbBh9HPIdHRvQzFacUwzVnd5bXBHRkMwNFZ4NEE&transpose=0&headers=1&range=AD1%3AAE5&gid=0&pub=1","options":{"chartArea":{"left":10,"top":10,"width":"90%","height":"90%"},"width":550,"height":550,"vAxes":[{"useFormatFromData":true,"minValue":null,"viewWindow":{"max":null,"min":null},"maxValue":null},{"useFormatFromData":true,"minValue":null,"viewWindow":{"max":null,"min":null},"maxValue":null}],"titleTextStyle":{"bold":true,"color":"#000","fontSize":16},"pieHole":0,"booleanRole":"certainty","title":"","animation":{"duration":0},"colors":["#660000","#274e13","#073763","#7f6000","#990099","#0099C6","#DD4477","#66AA00","#B82E2E","#316395","#994499","#22AA99","#AAAA11","#6633CC","#E67300","#8B0707","#651067","#329262","#5574A6","#3B3EAC","#B77322","#16D620","#B91383","#F4359E","#9C5935","#A9C413","#2A778D","#668D1C","#BEA413","#0C5922","#743411"],"legend":"none","theme":"maximized","is3D":false,"hAxis":{"useFormatFromData":true,"minValue":null,"viewWindow":{"max":null,"min":null},"maxValue":null},"tooltip":{}},"state":{},"view":{"columns":[{"calc":"stringify","sourceColumn":0,"type":"string"},1]},"isDefaultVisualization":true,"chartType":"PieChart","chartName":"Chart 1"} </script>
 </body>
 </html>
