--- a/chart-community.html
+++ b/chart-community.html
@@ -11,7 +11,8 @@ body
 </head>  
 <body>
   <!--
-  "chartArea":{"left":10,"top":10,"width":"90%","height":"90%"},"width":550,"height":550,
+  
   -->
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/static/modules/gviz/1.0/chart.js"> {"dataSourceUrl":"//docs.google.com/a/ocupop.com/spreadsheet/tq?key=0AtI8QbBh9HPIdHRvQzFacUwzVnd5bXBHRkMwNFZ4NEE&transpose=0&headers=1&range=AL1%3AAM5&gid=0&pub=1","options":{"chartArea":{"left":10,"top":10,"width":"90%","height":"90%"},"width":550,"height":550,"vAxes":[{"title":"Left vertical axis title","useFormatFromData":true,"minValue":null,"viewWindow":{"min":null,"max":null},"maxValue":null},{"useFormatFromData":true,"minValue":null,"viewWindow":{"min":null,"max":null},"maxValue":null}],"titleTextStyle":{"bold":true,"color":"#000","fontSize":16},"pieHole":0,"title":"","booleanRole":"certainty","animation":{"duration":500},"colors":["#073763","#660000","#7f6000","#274e13","#990099","#0099C6","#DD4477","#66AA00","#B82E2E","#316395","#994499","#22AA99","#AAAA11","#6633CC","#E67300","#8B0707","#651067","#329262","#5574A6","#3B3EAC","#B77322","#16D620","#B91383","#F4359E","#9C5935","#A9C413","#2A778D","#668D1C","#BEA413","#0C5922","#743411"],"legend":"none","theme":"maximized","is3D":false,"hAxis":{"title":"Horizontal axis title","useFormatFromData":true,"minValue":null,"viewWindow":{"min":null,"max":null},"maxValue":null},"tooltip":{}},"state":{},"view":{},"isDefaultVisualization":true,"chartType":"PieChart","chartName":"Chart 2"} </script>
 </body>
 </html>
